# kilo

./: .gitignore  CMakeLists.txt  Makefile  append_buffer.c  append_buffer.h  config.h  file.c  file.h  input.c  input.h  kilo.c  output.c  output.h  row_operations.c  row_operations.h  run.sh  terminal.c  terminal.h  test_input.txt  testing.txt
.cache/clangd/index/: append_buffer.c.A830CF5D199F62A9.idx  append_buffer.h.6B1EF798C4E35980.idx  config.h.B4704CF72031D4FD.idx  file.c.249E6CF200F6EB30.idx  file.h.E1D136A1ACB5BFE1.idx  input.c.6C8143CAF136DD83.idx  input.h.FF872BB2D3601767.idx  kilo.c.177001C2DB098448.idx  output.c.B484E35B54DDA701.idx  output.h.A8457F1B51389227.idx  row_operations.c.E654C1F634938EE5.idx  row_operations.h.EFFB6D5E2959D122.idx  terminal.c.58F62F135946B88C.idx  terminal.h.48D03666D3512CF2.idx
